--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </ul>
 
         <!-- Call to Action Button -->
-        <a href="https://topmate.io/suvigya_nijhawan/page/Np0tQUW7o6" target="_blank" rel="noopener noreferrer"
+        <a href="https://suvi7896.github.io/temp/booking.html" target="_blank" rel="noopener noreferrer"
            class="inline-block bg-purple-700 hover:bg-purple-800 text-white font-semibold py-3 px-8 rounded-lg
                   transition duration-300 ease-in-out transform hover:scale-105 shadow-xl
                   focus:outline-none focus:ring-4 focus:ring-purple-500 focus:ring-opacity-50 text-lg">
