Update booking.html with the updated Topmate site

--- a/booking.html
+++ b/booking.html
@@ -31,7 +31,7 @@
             We appreciate your trust and look forward to our meeting.
         </p>
         <button
-            onclick="window.location.href = '/';"
+            onclick="window.location.href = 'https://topmate.io/suvigya_nijhawan/page/Np0tQUW7o6';"
             class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 px-6 rounded-lg shadow-md transition-all duration-300 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-75"
         >
             Go to Main Site
