Update booking.html With Event Snippet

--- a/booking.html
+++ b/booking.html
@@ -11,7 +11,14 @@
 
     gtag('config', 'AW-17339843837');
     </script>
-    
+    <!-- Event snippet for Submit lead form conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17339843837/617eCPuM3_waEP2JpMxA',
+      'value': 1.0,
+      'currency': 'USD'
+  });
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Session Booked!</title>
